# rivulet

./: .gitignore  Cargo.toml  LICENSE  README.md  vcpkg.json
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: LINUX_BUILD.md
rivulet-audio/: Cargo.toml
rivulet-capture/: Cargo.toml
rivulet-capture/examples/: test_capture.rs
rivulet-capture/src/: lib.rs  screen.rs
rivulet-core/: Cargo.toml
rivulet-core/src/: config.rs  lib.rs  output.rs  scene.rs  source.rs
rivulet-gui/: Cargo.toml  build.rs
rivulet-gui/src/: app.rs  main.rs
rivulet-obs-compat/: Cargo.toml
rivulet-obs-compat/src/: api.rs  lib.rs  plugin.rs  types.rs
rivulet-plugins/: Cargo.toml
rivulet-streaming/: Cargo.toml  build.rs
rivulet-streaming/examples/: list_monitors.rs  record_screen.rs  test_encoder.rs
rivulet-streaming/src/: encoder.rs  lib.rs
rivulet-streaming/src/encoder/: mod.rs  video.rs
rivulet-streaming/src/recorder/: mod.rs
