[workspace]
members = [
    "rivulet-core",
    "rivulet-gui", 
    "rivulet-capture",
    "rivulet-audio",
    "rivulet-streaming",
    "rivulet-plugins",
    "rivulet-obs-compat"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
