[workspace]
members = [
    "rivulet-core",
    "rivulet-gui",
    "rivulet-capture",
    "rivulet-audio",
    "rivulet-streaming",
    "rivulet-plugins",
    "rivulet-obs-compat"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["thoser666"]
edition = "2021"
repository = "https://github.com/thoser666/rivulet"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
xcap = "0.8.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true