[package]
name = "rivulet-capture"
version = "0.1.0"
edition = "2021"
description = "Screen and window capture for Rivulet"

[dependencies]
rivulet-core = { path = "../rivulet-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.20"

[[example]]
name = "test_capture"
path = "examples/test_capture.rs"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Foundation",
    "Win32_System_Com",
]}