[package]
name = "rivulet-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Rivulet streaming software"

[dependencies]
# Workspace-Abhängigkeiten (unverändert)
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Andere Kern-Abhängigkeiten (unverändert)
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dirs = "5.0" # Version 5 ist gängiger und stabiler
toml = "0.8" # Version 0.8 ist gängiger und stabiler
async-trait = "0.1"

# --- GStreamer-Abhängigkeiten (abgestimmt auf v0.24) ---

# Haupt-GStreamer-Bibliothek. Kein "parse"-Feature, da dies in pbutils ist.
gstreamer = "0.24"

# Für das `appsrc`-Element, um unsere Daten in die Pipeline einzuspeisen.
gstreamer-app = "0.24"

# Für Video-spezifische Typen wie `VideoInfo` und `VideoFormat`.
gstreamer-video = "0.24"

# Enthält die `parse_launch`-Funktion in neueren gstreamer-rs Versionen.
gstreamer-pbutils = "0.24"

# GLib ist eine fundamentale Abhängigkeit für das gesamte GObject-System,
# auf dem GStreamer aufbaut. v0.20 ist kompatibel mit gstreamer v0.24.
glib = "0.20"

# `once_cell` wird für die sichere, einmalige Initialisierung von GStreamer verwendet.
once_cell = "1.19.0"