[package]
name = "rivulet-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Rivulet streaming software"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dirs = "6.0"
toml = "1.1"
async-trait = "0.1"
#ffmpeg-next = "7.0"
#rusty_ffmpeg = "0.16.7+ffmpeg.8"
#rusty_ffmpeg = { version = "0.16.7+ffmpeg.8", features = ["link_vcpkg_ffmpeg"] }

gstreamer = "0.24"
gstreamer-app = "0.24"
gstreamer-video = "0.24"


# Diese Crate wird oft als Hilfsbibliothek benötigt
glib = "0.20"

# Diese Crate hilft bei der einmaligen Initialisierung
once_cell = "1.19.0"