[package]
name = "rivulet-core"
version = "0.1.0"
edition = "2021"
description = "Core engine for Rivulet streaming software"

[dependencies]
# Workspace-Abhängigkeiten (unverändert)
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Andere Kern-Abhängigkeiten (unverändert)
uuid = { version = "1.0", features = ["v4", "serde"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
dirs = "6.0"
toml = "1.1"
async-trait = "0.1"

gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"

# Enthält die `parse_launch`-Funktion in neueren gstreamer-rs Versionen.
gstreamer-pbutils = "0.24"

# Diese Crate wird oft als Hilfsbibliothek benötigt
glib = "0.22"

# `once_cell` wird für die sichere, einmalige Initialisierung von GStreamer verwendet.
once_cell = "1.19.0"