[package]
name = "rivulet-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# GUI-Framework
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

# Abhängigkeiten für die Rivulet-App-Logik
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }

# Asynchrone Laufzeit und Desktop-Portale
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
serde_json = "1.0.114"
anyhow = "1.0.81"

# Lokale Core-Bibliothek
rivulet-core = { path = "../rivulet-core" }

# Logging-Bibliothek
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

# --- NEU: Bildverarbeitungs-Bibliothek für das Icon ---
image = { version = "0.25.1", features = ["png"] }

[build-dependencies]
winres = "0.1"
