[package]
name = "rivulet-gui"
version = "0.1.0"
edition = "2021"
description = "GUI application for Rivulet streaming software"

[[bin]]
name = "rivulet"
path = "src/main.rs"

[dependencies]
rivulet-core = { path = "../rivulet-core" }
rivulet-obs-compat = { path = "../rivulet-obs-compat" }
rivulet-capture = { path = "../rivulet-capture" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = "0.33"
egui = "0.32"
egui_extras = "0.33"
rfd = "0.14"
poll-promise = "0.3"
chrono = "0.4"
image = "0.25" # for PNG Export later