[package]
name = "rivulet-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# GUI-Framework
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

# Abhängigkeiten für die Rivulet-App-Logik
log = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }

# Asynchrone Laufzeit und Desktop-Portale
tokio = { version = "1.36.0", features = ["full"] }
once_cell = "1.19.0"
serde_json = "1.0.114"
anyhow = "1.0.81"

# Lokale Core-Bibliothek
rivulet-core = { path = "../rivulet-core" }

# Logging-Bibliothek
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

# Bildverarbeitungs-Bibliothek für das Icon
image = { version = "0.25.1", features = ["png"] }

# winit wird für die Picker-Konfiguration unter Windows benötigt
[target.'cfg(target_os = "windows")'.dependencies.winit]
version = "0.30"

# Linux-spezifische Abhängigkeiten
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.8.1", features = ["tokio"] }
pipewire = { version = "0.9.1", features = ["v0_3_33"] }



[target.'cfg(target_os = "windows")'.dependencies.windows-capture]
version = "1.5.0"

# Build-Abhängigkeiten
[build-dependencies]
winres = "0.1"