[package]
name = "rivulet-streaming"
version = "0.1.0"
edition = "2021"
description = "Video encoding and streaming for Rivulet"

[dependencies]
rivulet-core = { path = "../rivulet-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = "0.5"
ffmpeg-next = "7.1"

[build-dependencies]
vcpkg = "0.2"

[dev-dependencies]
tracing-subscriber = { workspace = true }