[package]
name = "rivulet-streaming"
version = "0.1.0"
edition = "2021"
description = "Video encoding and streaming for Rivulet"

[dependencies]
rivulet-core = { path = "../rivulet-core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
crossbeam-channel = "0.5"

# Verwende FFmpeg als externes Binary (kein Linking!)
ffmpeg-sidecar = "2.0"
serde_json = "1.0"

[dev-dependencies]
tracing-subscriber = { workspace = true }